# cascaid-slack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cascaid_slack/: __init__.py  _state.py  events.py  notifier.py  pins.py  storage.py
src/cascaid_slack/cleanup/: __init__.py  api.py  archive.py  delete.py  rules.py  runner.py
tests/: test_cleanup_api.py  test_cleanup_archive.py  test_cleanup_delete.py  test_cleanup_rules.py  test_cleanup_runner.py  test_events.py  test_notifier.py  test_pins.py  test_storage_eventlog.py  test_storage_json.py
