# pyproject.toml - cascaid-slack: shared internal Slack notification library
#
# This package extracts the homegrown Slack patterns that grew up inside
# automatic-charting (and got copied/drifted into minimal_reporting):
#
#   * NotificationService -- post text + upload files
#   * upsert_pinned_message -- single rolling pinned message per "report kind"
#     with hash-skip and self-heal on Slack-side deletion
#   * send_slack_event -- date-grouped event log (one header per day)
#   * cleanup -- bulk-delete tooling with archive, file download, dual-token
#     support for cross-bot delete, etc.
#
# Transport is slack_sdk.WebClient (official). We don't reinvent the wheel for
# rate limits, file uploads, or response parsing -- that's what slack_sdk
# exists for. The value-add here is the higher-level patterns built on top.

[project]
name = "cascaid-slack"
version = "0.1.0"
description = "Cascaid's shared Slack notification patterns: rolling pins, event logs, bulk cleanup."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Cascaid Technologies" },
]
dependencies = [
    # Official Slack SDK -- handles transport, retries, typed responses.
    # 3.27+ has the modern files.getUploadURLExternal / completeUploadExternal
    # flow built in, which is what we want post-2025 file-upload deprecation.
    "slack_sdk>=3.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.1.17",
    "flake8-comprehensions>=3.14.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.6",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascaid_slack"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src/cascaid_slack"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ['tests', 'build', 'dist']

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
